// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SupportStatusLabel /> should render 1`] = `"N/A"`;

exports[`<SupportStatusLabel /> should render for every possible support status renders for End of Life 1`] = `
<SupportStatus
  status="End Of Life"
/>
`;

exports[`<SupportStatusLabel /> should render for every possible support status renders for Extended Update Support 1`] = `
<SupportStatus
  status="Extended Update Support"
/>
`;

exports[`<SupportStatusLabel /> should render for every possible support status renders for Full Support 1`] = `
<SupportStatus
  status="Full Support"
/>
`;

exports[`<SupportStatusLabel /> should render for every possible support status renders for Maintainence Support 1`] = `
<SupportStatus
  status="Maintainence Support"
/>
`;

exports[`<SupportStatusLabel /> should render for every possible support status renders for an unrecognized status 1`] = `
<SupportStatus
  status="some other status"
/>
`;

exports[`<SupportStatusLabel /> should render skeleton when pending 1`] = `
<Skeleton
  className="inline-skeleton"
  isDark={false}
  size="sm"
/>
`;

exports[`<SupportStatusLabel /> should show N/A for a pre-release version 1`] = `"N/A"`;

exports[`<SupportStatusLabel /> should show N/A when support status is unknown 1`] = `"N/A"`;
